--- a/css.css
+++ b/css.css
@@ -6,33 +6,38 @@
     background-size: cover;
 	overflow-x:hidden; /*overflow-y:hidden; - для вертикального overflow-x:hidden; - для горизонтального - это всё убирает прокрутку страницы (скролл)*/
 }
+header p { tekstalign: right;}
+.dc
+{
+    text-align: left;
+    margin-left: 20px;
+}
+header {
+background: white;
+height: 150px;
+width: 118em;
+position: relative;
+top: 20px;
+margin: 0 auto;
+}
 .block-one
 {
-    animation: move1 1s;
-    position: absolute;
-    top: 10em;
-    margin-left: 20em;
+  text-align: center; 
+  animation: move1 1s;
+  /* position: absolute; */
+  left:220px; 
+   top:2.6%; 
+    line-height: 1px;
 	text-shadow: 1px -1px 3px #FFC0CB, 2px 2px 10px #FFC0CB; /* Параметры тени - <сдвиг по x> <сдвиг по y> <радиус размытия> <цвет> */
-	color: #DC143C; /* Белый цвет текста */
-	font-size: 35px; /* Размер надписи */
-    font-family: sans-serif; /*шрифт*/
-}
-.block-one2
-{
-    animation: move2 1s;
-    position: absolute;
-    top: 11em;
-    margin-left: 20em;
-    text-shadow: 1px -1px 3px #FFC0CB, 2px 2px 10px #FFC0CB; /* Параметры тени - <сдвиг по x> <сдвиг по y> <радиус размытия> <цвет> */
-    color: #DC143C; /* Белый цвет текста */
-    font-size: 35px; /* Размер надписи */
+	color: #DC143C; /*  цвет текста */
+	font-size: 25px; /* Размер надписи */
     font-family: sans-serif; /*шрифт*/
 }
 .leftpic
 {
     float: right; /*Определяет, по какой стороне будет выравниваться элемент*/
     padding: 0 20px 20px 0; /*Устанавливает значение полей вокруг содержимого элемента*/
-    width: 400px;
+    width: 330px;
     clear: both; /*Устанавливает, с какой стороны элемента запрещено его обтекание другими элементами, both - с правого и левого края*/
 }
 .kpposition
@@ -49,15 +54,25 @@
 }
 .avtor
 {
-    animation: move1 1s;
-    position: absolute;
-    top: 21em;
-    right: 8em;
+    animation: move2 1s;
+    position: relative;
+    text-align: right;
     text-shadow: 1px -1px 3px #DB7093, 2px 2px 10px #DB7093; /* Параметры тени - <сдвиг по x> <сдвиг по y> <радиус размытия> <цвет> */
-    color: #FF0000; /* Белый цвет текста */
-    font-size: 35px; /* Размер надписи */
+    color: #DC143C; /*  цвет текста */
+    font-size: 25px; /* Размер надписи */
     font-family: sans-serif; /*шрифт*/
     line-height: 1px;
+ bottom: 200px;
+}
+.osnk
+{
+    margin-top: 10px;
+    margin-right: 20px;
+    color: #FBEEEE; /* цвет текста */
+    font-family: Verdana; /*шрифт*/
+    float: left; /*Определяет, по какой стороне будет выравниваться элемент*/
+    width: 600px;
+    clear: both; /*Устанавливает, с какой стороны элемента запрещено его обтекание другими элементами, both - с правого и левого края*/
 }
 .kirimg
 {
@@ -80,15 +95,6 @@
     font-family: Tahoma; /*шрифт*/
     text-align: center;
 }
-.osngl
-{
-    position: relative;
-    text-shadow: 1px -1px 60px #0000FF, 1px 1px 20px #0000FF; /* Параметры тени - <сдвиг по x> <сдвиг по y> <радиус размытия> <цвет> */
-    color: #00FFFF; /* Белый цвет текста */
-    font-size: 55px; /* Размер надписи */
-    font-family: Tahoma; /*шрифт*/
-    text-align: center;
-}
 .kirn
 {
     position: relative;
@@ -97,42 +103,6 @@
     color: #FBEEEE; /* цвет текста */
     font-size: 30px; /* Размер надписи */
     font-family: Tahoma; /*шрифт*/
-}
-.osnk
-{
-    margin-top: 10px;
-    margin-right: 20px;
-    color: #FBEEEE; /* цвет текста */
-    font-family: Verdana; /*шрифт*/
-
-    float: right; /*Определяет, по какой стороне будет выравниваться элемент*/
-
-    width: 600px;
-    clear: both; /*Устанавливает, с какой стороны элемента запрещено его обтекание другими элементами, both - с правого и левого края*/
-}
-.osnn
-{
-    position: relative;
-    margin-top: 20px;
-    margin-left: 30px;
-    color: #FBEEEE; /* цвет текста */
-    font-size: 28px; /* Размер надписи */
-    font-family: Verdana; /*шрифт*/
-}
-.osng
-{
-    position: relative;
-    color: #FBEEEE; /* цвет текста */
-    font-size: 28px; /* Размер надписи */
-    font-family: Verdana; /*шрифт*/
-}
-.osnp
-{
-    position: relative;
-    margin-left: 30px;
-    color: #9370DB; /* цвет текста */
-    font-size: 30px; /* Размер надписи */
-    font-family: Arial Black; /*шрифт*/
 }
 .istgl
 {
@@ -175,49 +145,6 @@
     font-size: 22px; /* Размер надписи */
     font-family: Verdana; /*шрифт*/
 }
-
-.otspbgl
-{
-    position: relative;
-    text-shadow: 1px -1px 60px #FF0000, 1px 1px 30px #FF0000; /* Параметры тени - <сдвиг по x> <сдвиг по y> <радиус размытия> <цвет> */
-    color: #FF6347; /* Белый цвет текста */
-    font-size: 55px; /* Размер надписи */
-    font-family: Tahoma; /*шрифт*/
-    text-align: center;
-}
-.otspbp
-{
-    position: relative;
-    margin-left: 30px;
-    color: #FF8C00; /* цвет текста */
-    font-size: 28px; /* Размер надписи */
-    font-family: Arial Black; /*шрифт*/
-}
-.otspbp2
-{
-    position: relative;
-    margin-left: 30px;
-    color: #FF7F50; /* цвет текста */
-    font-size: 26px; /* Размер надписи */
-    font-family: Arial Black; /*шрифт*/
-}
-.otspbg
-{
-    position: relative;
-    color: #FBEEEE; /* цвет текста */
-    font-size: 22px; /* Размер надписи */
-    font-family: Verdana; /*шрифт*/
-}
-.otspbn
-{
-    position: relative;
-    margin-top: 20px;
-    margin-left: 30px;
-    color: #FBEEEE; /* цвет текста */
-    font-size: 22px; /* Размер надписи */
-    font-family: Verdana; /*шрифт*/
-}
-
 .kiradr
 {
     position: relative;
@@ -231,6 +158,14 @@
 {
     text-align: center;
     top: 20em;
+}
+.karta2
+{
+    position: absolute;
+    bottom: 0px;
+    right: 10em;
+    top:15em;
+
 }
 input.btnkir
 {
@@ -489,28 +424,63 @@ input.kpa:active
 } /* при нажатии */
 .icons
 {
-   position: absolut;
-
-    left:1%;
-    top:2%;
-    width: 150px;
+    position: relative;
+    left:30px;
+    top:15%;
+    width: 400px;
+    animation: move1 1s;
 }
 .icons2
 {
     position: relative;
     top: 30px;
 }
-.dc
+.forma
 {
-    text-align: center;
+    position: absolute;
+    top: 20px;
+    right: 0;
 }
-header {
-background: white;
-height: 200px;
-width: 118em;
-position: relative;
-top: 20px;
-margin: 0 auto;
+input.kpform
+{
+    animation: moveform 1s;
+    position: absolute;
+    top: 40px;
+    right: 10px;
+    border-radius: 10px;
+    border: 1px solid #F0E68C;
+    color: black; /* цвет текста */
+    background: #EEE8AA; /* фон кнопки */
+    padding: 0.8em 1em; /* отступ от текста */
+    outline: none; /*линия отображается вокруг элемента*/
+    font-size: 25px; /* Размер надписи */
+    font-family: monospace; /*шрифт*/
+}
+.line {
+    width: 100%;
+    height: 4px;
+    top: 0px;
+    margin-left: -15px;
+    position: absolute;
+}
+.line::after {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    content: ''; /*позволяет вставлять генерируемое содержание в текст веб-страницы,
+    которое первоначально в тексте отсутствует.
+    Применяется совместно с псевдоэлементами :after и :before,
+    они соответственно указывают отображать новое содержимое после или до элемента, к которому добавляются.*/
+    background-color: #FFEFD5;
+    animation: spin 1.5s infinite linear;
+}
+@keyframes spin {
+    50% {
+    transform: translate3d(0, -100%, 0);
+    }
+    100% {
+    transform: translate3d(0, 100%, 100%);
+    }
 }
 .tablep {
     
@@ -578,15 +548,19 @@ margin: 0 auto;
     border: 1px solid grey;
     padding: 10px; 
 }
-
+@keyframes moveform{
+    from {
+    transform: translate3d(0, -50%, 0);
+    }
+}
 @keyframes move1{
     from {
-    transform: translate3d(600%, 140%, 0);
+    transform: translate3d(0, -150%, 0);
     }
 }
 @keyframes move2{
     from {
-    transform: translate3d(600%, 240%, 0);
+    transform: translate3d(-30%, 0, 0);
     }
 }
 
